fix(ionic/forms): add flex-wrap to radio-group in form field

--- a/src/ionic/forms/field.scss
+++ b/src/ionic/forms/field.scss
@@ -15,6 +15,7 @@ ajf-field {
 
     > ion-radio-group {
       display: flex;
+      flex-wrap: wrap;
 
       ion-item {
         --ion-item-border-color: transparent;
